--- a/style.css
+++ b/style.css
@@ -65,3 +65,112 @@ body {
   padding: 0 1.5rem;
 }
 
+/* FORM ELEMENTS */
+.handmade-form h1,
+.handmade-form li,
+.handmade-form .grid > *:not(:last-child) {
+  margin-bottom: 1.5rem;
+}
+
+.handmade-form .form-wrapper,
+.handmade-form input:not([type="radio"]),
+.handmade-form textarea,
+.handmade-form button,
+.handmade-form .checkbox-list label {
+  position: relative;
+}
+
+.handmade-form input:not([type="radio"]),
+.handmade-form textarea,
+.handmade-form button,
+.handmade-form .checkbox-list label {
+  z-index: 1;
+}
+
+.handmade-form input:not([type="radio"]),
+.handmade-form textarea,
+.handmade-form button {
+  width: 100%;
+}
+
+.handmade-form input:not([type="radio"]),
+.handmade-form textarea,
+.handmade-form fieldset {
+  padding: 15px;
+}
+
+.handmade-form textarea {
+  height: 200px;
+  vertical-align: top;
+}
+
+.handmade-form legend {
+  padding-top: 15px;
+  margin: 0 auto;
+}
+
+.handmade-form ::placeholder {
+  color: inherit;
+  /*Fix opacity issue on Firefox*/
+  opacity: 1;
+}
+
+.handmade-form .form-wrapper svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.handmade-form button {
+  font-family: "Summer Bold";
+  color: var(--white);
+  padding: 5px 10px;
+}
+
+
+/* RADIO BUTTONS */
+.handmade-form .checkbox-list {
+  display: flex;
+  justify-content: center;
+}
+
+.handmade-form .checkbox-list li:not(:last-child) {
+  margin-right: 50px;
+}
+
+.handmade-form .checkbox-list li {
+  margin-bottom: 0;
+}
+
+.handmade-form .checkbox-list label svg {
+  top: 50%;
+  left: -25px;
+  width: 20px;
+  height: 20px;
+  transform: translateY(-50%);
+}
+
+.handmade-form .checkbox-list label .checkmark {
+  /*the value of the stroke-* properties comes from the getTotalLength() method*/
+  stroke-dasharray: 233.69552612304688;
+  stroke-dashoffset: 233.69552612304688;
+  transition: stroke-dashoffset 0.5s linear;
+}
+
+.handmade-form [type="radio"]:checked + label .checkmark {
+  stroke-dashoffset: 0;
+}
+
+
+/* FOOTER */
+footer {
+  font-family: "Summer Bold";
+  font-size: 2rem;
+  text-align: right;
+}
+
+footer span {
+  color: var(--red);
+}
